Split add and update for import/export apis
